--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -30,9 +30,9 @@ dependencies {
     implementation "com.acmerobotics.roadrunner:core:1.0.0"
     implementation "com.acmerobotics.roadrunner:actions:1.0.0"
     implementation "com.acmerobotics.dashboard:dashboard:0.4.16"
+    implementation "page.j5155.roadrunner:ftc-otos:0.1.2+0.1.14"
 }
 repositories {
     maven { url = 'https://maven.brott.dev/' }
-
-
+    maven { url = 'https://repo.dairy.foundation/releases' }
 }
